# bolao

./: .env.example  .gitignore  ANALISE_COMPLETA_REPOSITORIO_BOLAO_COPA.md  CLAUDE.md  DOCUMENTACAO_COMPLETA_BOLAO_COPA.md  RUNBOOK.md  SECURITY.md  bolao.service  inicio.md  middleware.ts  nginx.conf  package-lock.json  package.json  plano.md  proximos_passos.md  pyproject.toml  relatorio.md  requirements.txt  tailwind.config.ts
.claude/: settings.json  settings.local.json
alembic/: env.py
app/: database.py  globals.css  jogo_fases.py  layout.tsx  main.py  page.tsx  theme_defaults.py
deploy/: bootstrap-ec2-deploy.sh  sudoers-bolao-deploy
frontend/: index.html  package-lock.json  package.json  vite.config.ts
lib/: auth-edge.ts  auth.ts  colors.ts  db.ts  deadlines.ts  scoring.ts  timezone.ts  utils.ts
prisma/: schema.prisma  seed.ts
scripts/: cleanup_orphan_avatars.py  provisionar_convites_expirados.py  seed_admin.py  seed_configuracao_bolao.py  seed_paises_grupos.py  setup_aws_secret.py  wipe_operational_data.py
tests/: __init__.py  conftest.py  factories.py  helpers.py  test_auditoria_admin.py  test_auth_activation.py  test_auth_me.py  test_auth_refresh.py  test_auth_refresh_replay.py  test_bloqueios.py  test_comunicado_equipe.py  test_config_production.py  test_convite_senha_padrao.py  test_convites_bulk.py  test_email_assinatura.py  test_email_resend.py  test_empresa_quota.py  test_empresas_list.py  test_equipe_listagem.py  test_equipe_reenviar.py  test_health.py  test_limites_payload.py  test_marcadores_brasil_empresa.py  test_mata_mata_penaltis.py  (+16 more)
(+251 files in other folders)
